add python version

--- a/using_datalab/jupyter_notebooks/01_edito_datalab_demo.ipynb
+++ b/using_datalab/jupyter_notebooks/01_edito_datalab_demo.ipynb
@@ -51,15 +51,25 @@
         "\n",
         "try:\n",
         "    response = requests.get(f\"{stac_endpoint}collections\")\n",
-        "    collections = response.json()\n",
         "    \n",
-        "    print(f\"✅ Connected to EDITO STAC API\")\n",
-        "    print(f\"Found {len(collections['collections'])} data collections\")\n",
-        "    \n",
-        "    # Show first few collections\n",
-        "    print(\"\\n📋 Available data collections:\")\n",
-        "    for i, collection in enumerate(collections['collections'][:10]):\n",
-        "        print(f\"{i+1:2d}. {collection['id']} - {collection.get('title', 'No title')}\")\n",
+        "    if response.status_code == 200:\n",
+        "        collections = response.json()\n",
+        "        \n",
+        "        print(f\"✅ Connected to EDITO STAC API\")\n",
+        "        print(f\"Found {len(collections['collections'])} data collections\")\n",
+        "        \n",
+        "        # Show first few collections\n",
+        "        print(\"\\n📋 Available data collections:\")\n",
+        "        for i, collection in enumerate(collections['collections'][:10]):\n",
+        "            print(f\"{i+1:2d}. {collection['id']} - {collection.get('title', 'No title')}\")\n",
+        "            \n",
+        "        # Store available collection IDs for later use\n",
+        "        available_collections = [col['id'] for col in collections['collections']]\n",
+        "        print(f\"\\n💡 Available collection IDs: {available_collections[:5]}...\")\n",
+        "        \n",
+        "    else:\n",
+        "        print(f\"❌ Failed to connect to EDITO API: HTTP {response.status_code}\")\n",
+        "        print(f\"Response: {response.text}\")\n",
         "        \n",
         "except Exception as e:\n",
         "    print(f\"❌ Error connecting to EDITO API: {e}\")\n"
@@ -76,25 +86,77 @@
         "\n",
         "try:\n",
         "    search_url = f\"{stac_endpoint}search\"\n",
+        "    \n",
+        "    # Try to use an available collection, or search all collections\n",
+        "    if 'available_collections' in locals() and available_collections:\n",
+        "        # Look for occurrence data collection specifically (has parquet files)\n",
+        "        occurrence_collections = [col for col in available_collections if 'occurrence' in col.lower() and 'emodnet-occurrence_data' in col]\n",
+        "        if occurrence_collections:\n",
+        "            search_collections = occurrence_collections[:1]  # Use occurrence data collection\n",
+        "            print(f\"🔍 Searching in occurrence data collection: {search_collections[0]}\")\n",
+        "        else:\n",
+        "            # Look for other biodiversity collections\n",
+        "            bio_collections = [col for col in available_collections if any(keyword in col.lower() for keyword in ['eurobis', 'bio', 'species', 'fish', 'habitat'])]\n",
+        "            if bio_collections:\n",
+        "                search_collections = bio_collections[:1]  # Use first biodiversity collection found\n",
+        "                print(f\"🔍 Searching in biodiversity collection: {search_collections[0]}\")\n",
+        "            else:\n",
+        "                search_collections = available_collections[:1]  # Use first available collection\n",
+        "                print(f\"🔍 Searching in available collection: {search_collections[0]}\")\n",
+        "    else:\n",
+        "        # Use the occurrence data collection as fallback\n",
+        "        search_collections = [\"emodnet-occurrence_data\"]\n",
+        "        print(\"🔍 Searching in occurrence data collection (fallback)\")\n",
+        "    \n",
         "    search_params = {\n",
-        "        \"collections\": [\"eurobis-occurrence-data\"],\n",
+        "        \"collections\": search_collections,\n",
         "        \"limit\": 5\n",
         "    }\n",
         "    \n",
         "    response = requests.post(search_url, json=search_params)\n",
-        "    search_results = response.json()\n",
         "    \n",
-        "    print(f\"✅ Found {len(search_results['features'])} biodiversity items\")\n",
-        "    \n",
-        "    # Show first item\n",
-        "    if search_results['features']:\n",
-        "        first_item = search_results['features'][0]\n",
-        "        print(f\"\\n📊 Sample item: {first_item['id']}\")\n",
-        "        print(f\"Title: {first_item['properties'].get('title', 'No title')}\")\n",
+        "    # Check if the response was successful\n",
+        "    if response.status_code == 200:\n",
+        "        search_results = response.json()\n",
         "        \n",
-        "        print(\"\\n🔗 Available data formats:\")\n",
-        "        for asset_name, asset in first_item['assets'].items():\n",
-        "            print(f\"- {asset_name}: {asset['href']}\")\n",
+        "        # Check if the response contains features\n",
+        "        if 'features' in search_results:\n",
+        "            print(f\"✅ Found {len(search_results['features'])} biodiversity items\")\n",
+        "            \n",
+        "            # Show first item\n",
+        "            if search_results['features']:\n",
+        "                first_item = search_results['features'][0]\n",
+        "                print(f\"\\n📊 Sample item: {first_item['id']}\")\n",
+        "                print(f\"Title: {first_item['properties'].get('title', 'No title')}\")\n",
+        "                \n",
+        "                print(\"\\n🔗 Available data formats:\")\n",
+        "                for asset_name, asset in first_item['assets'].items():\n",
+        "                    print(f\"- {asset_name}: {asset['href']}\")\n",
+        "            else:\n",
+        "                print(\"ℹ️ No biodiversity items found in the search results\")\n",
+        "        else:\n",
+        "            print(f\"⚠️ Unexpected response format: {search_results}\")\n",
+        "    else:\n",
+        "        print(f\"❌ STAC search failed with status {response.status_code}\")\n",
+        "        error_response = response.json() if response.headers.get('content-type', '').startswith('application/json') else response.text\n",
+        "        print(f\"Error details: {error_response}\")\n",
+        "        \n",
+        "        # Fallback: try a different collection or search without specific collection\n",
+        "        print(\"\\n🔄 Trying alternative search...\")\n",
+        "        fallback_params = {\"limit\": 5}\n",
+        "        fallback_response = requests.post(search_url, json=fallback_params)\n",
+        "        \n",
+        "        if fallback_response.status_code == 200:\n",
+        "            fallback_results = fallback_response.json()\n",
+        "            if 'features' in fallback_results and fallback_results['features']:\n",
+        "                print(f\"✅ Found {len(fallback_results['features'])} items in general search\")\n",
+        "                first_item = fallback_results['features'][0]\n",
+        "                print(f\"\\n📊 Sample item: {first_item['id']}\")\n",
+        "                print(f\"Collection: {first_item.get('collection', 'Unknown')}\")\n",
+        "            else:\n",
+        "                print(\"ℹ️ No items found in general search either\")\n",
+        "        else:\n",
+        "            print(f\"❌ Fallback search also failed with status {fallback_response.status_code}\")\n",
         "            \n",
         "except Exception as e:\n",
         "    print(f\"❌ Error searching STAC: {e}\")\n"
@@ -121,11 +183,11 @@
         "print(\"📊 Reading biodiversity data from Parquet...\")\n",
         "\n",
         "# EUROBIS biodiversity occurrence data\n",
-        "parquet_url = \"https://s3.waw3-1.cloudferro.com/emodnet/biology/eurobis_occurrence_data/eurobis_occurrences_geoparquet_2024-10-01.parquet\"\n",
+        "parquet_url = \"https://s3.waw3-1.cloudferro.com/emodnet/emodnet_biology/12639/eurobis_obisenv_view_2025-03-20.parquet\"\n",
         "\n",
         "try:\n",
         "    # Read a sample of the data (first 1000 records)\n",
-        "    df = pd.read_parquet(parquet_url)\n",
+        "    df = \n",
         "    df_sample = df.head(1000)\n",
         "    \n",
         "    print(f\"✅ Loaded {len(df_sample)} biodiversity records (sample)\")\n",
