git rid of separation

--- a/using_datalab/01_edito_datalab_demo.ipynb
+++ b/using_datalab/01_edito_datalab_demo.ipynb
@@ -35,6 +35,14 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
+        "import pyarrow.parquet as pq\n",
+        "import pyarrow as pa\n",
+        "import xarray as xr\n",
+        "import zarr\n",
+        "import boto3\n",
+        "import os\n",
+        "import fsspec\n",
+        "import s3fs\n",
         "\n",
         "print(\"🌊 EDITO Datalab Jupyter Demo\")\n",
         "print(\"=\" * 40)\n"
@@ -177,33 +185,92 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "import pyarrow.parquet as pq\n",
-        "import pyarrow as pa\n",
-        "\n",
-        "print(\"📊 Reading biodiversity data from Parquet...\")\n",
+        "print(\"📊 Querying parquet data metadata...\")\n",
         "\n",
         "# EUROBIS biodiversity occurrence data\n",
         "parquet_url = \"https://s3.waw3-1.cloudferro.com/emodnet/emodnet_biology/12639/eurobis_obisenv_view_2025-03-20.parquet\"\n",
         "\n",
+        "print(f\"🔗 Parquet URL: {parquet_url}\")\n",
+        "\n",
         "try:\n",
-        "    # Read a sample of the data (first 1000 records)\n",
-        "    df = \n",
-        "    df_sample = df.head(1000)\n",
+        "    # Use fsspec to read parquet file directly from S3\n",
+        "    print(\"📥 Reading parquet file using fsspec...\")\n",
         "    \n",
-        "    print(f\"✅ Loaded {len(df_sample)} biodiversity records (sample)\")\n",
-        "    print(f\"📋 Total records in dataset: {len(df)}\")\n",
-        "    print(f\"\\nColumns: {list(df_sample.columns)}\")\n",
+        "    # Create S3 filesystem with the correct endpoint\n",
+        "    fs = s3fs.S3FileSystem(\n",
+        "        endpoint_url=\"https://s3.waw3-1.cloudferro.com\",\n",
+        "        anon=True  # Anonymous access\n",
+        "    )\n",
+        "    \n",
+        "    # Parse the S3 path from the URL\n",
+        "    s3_path = \"emodnet/emodnet_biology/12639/eurobis_obisenv_view_2025-03-20.parquet\"\n",
+        "    \n",
+        "    # Read parquet file metadata\n",
+        "    parquet_file = pq.ParquetFile(s3_path, filesystem=fs)\n",
+        "    \n",
+        "    print(f\"✅ Successfully connected to parquet file\")\n",
+        "    print(f\"📊 Number of row groups: {parquet_file.num_row_groups}\")\n",
+        "    print(f\"📏 Total rows: {parquet_file.metadata.num_rows}\")\n",
+        "    print(f\"📋 Schema (first 20 columns):\")\n",
+        "    \n",
+        "    # Print schema information\n",
+        "    schema = parquet_file.schema\n",
+        "    schema_fields = list(schema)\n",
+        "    for i, field in enumerate(schema_fields[:20]):\n",
+        "        print(f\"  {i+1:2d}. {field.name}: {field.physical_type}\")\n",
+        "    \n",
+        "    if len(schema_fields) > 20:\n",
+        "        print(f\"  ... and {len(schema_fields) - 20} more columns\")\n",
+        "    \n",
+        "    # Get row group information (show only first few and last few)\n",
+        "    print(f\"\\n📊 Row group details (showing first 5 and last 5):\")\n",
+        "    total_groups = parquet_file.num_row_groups\n",
+        "    for i in range(min(5, total_groups)):\n",
+        "        rg = parquet_file.metadata.row_group(i)\n",
+        "        print(f\"  Row group {i}: {rg.num_rows} rows, {rg.total_byte_size} bytes\")\n",
+        "    \n",
+        "    if total_groups > 10:\n",
+        "        print(f\"  ... ({total_groups - 10} more row groups) ...\")\n",
+        "        # Show last 5 row groups\n",
+        "        start_idx = total_groups - 5\n",
+        "        for i in range(start_idx, total_groups):\n",
+        "            rg = parquet_file.metadata.row_group(i)\n",
+        "            print(f\"  Row group {i}: {rg.num_rows} rows, {rg.total_byte_size} bytes\")\n",
+        "    \n",
+        "    # Read just a small sample to show data structure\n",
+        "    print(f\"\\n📊 Reading sample data (first 10 rows)...\")\n",
+        "    # Read only the first few columns and limit rows\n",
+        "    sample_columns = list(schema.names)[:10]  # First 10 columns only\n",
+        "    sample_table = parquet_file.read_row_groups([0], columns=sample_columns)\n",
+        "    sample_df = sample_table.to_pandas().head(10)  # Only take first 10 rows\n",
+        "    \n",
+        "    print(f\"✅ Sample data loaded: {len(sample_df)} rows\")\n",
+        "    print(f\"📋 Sample columns: {list(sample_df.columns)}\")\n",
+        "    print(f\"\\nFirst 3 rows of sample data:\")\n",
+        "    print(sample_df.head(3))\n",
+        "    \n",
+        "    # Use the sample data for demonstration\n",
+        "    df_sample = sample_df\n",
         "    \n",
         "except Exception as e:\n",
-        "    print(f\"❌ Error reading parquet: {e}\")\n",
-        "    # Create sample data for demo\n",
-        "    print(\"Creating sample data for demonstration...\")\n",
+        "    print(f\"❌ Error reading parquet metadata: {e}\")\n",
+        "    print(\"📊 Creating sample biodiversity data for demonstration...\")\n",
+        "    \n",
+        "    # Create sample data for demonstration\n",
         "    df_sample = pd.DataFrame({\n",
-        "        'scientificName': ['Scomber scombrus', 'Gadus morhua', 'Pleuronectes platessa'] * 100,\n",
-        "        'decimalLatitude': np.random.uniform(50, 60, 300),\n",
-        "        'decimalLongitude': np.random.uniform(0, 10, 300),\n",
-        "        'eventDate': pd.date_range('2020-01-01', '2023-12-31', periods=300)\n",
-        "    })\n"
+        "        'scientificName': ['Scomber scombrus', 'Gadus morhua', 'Pleuronectes platessa', 'Merlangius merlangus', 'Solea solea'] * 20,\n",
+        "        'decimalLatitude': np.random.uniform(50, 60, 100),\n",
+        "        'decimalLongitude': np.random.uniform(0, 10, 100),\n",
+        "        'eventDate': pd.date_range('2020-01-01', '2023-12-31', periods=100)\n",
+        "    })\n",
+        "    \n",
+        "    print(f\"✅ Created sample dataset with {len(df_sample)} records\")\n",
+        "    print(f\"📋 Columns: {list(df_sample.columns)}\")\n",
+        "    print(f\"📊 Data types: {df_sample.dtypes.value_counts().to_dict()}\")\n",
+        "    \n",
+        "    # Show first few rows\n",
+        "    print(f\"\\nFirst 5 rows:\")\n",
+        "    print(df_sample.head())\n"
       ]
     },
     {
@@ -213,23 +280,31 @@
       "outputs": [],
       "source": [
         "# Filter for marine species\n",
-        "print(\"🐠 Filtering for marine species...\")\n",
+        "print(\"🐠 Analyzing marine species data...\")\n",
         "\n",
-        "marine_keywords = ['fish', 'pisces', 'mollusca', 'algae', 'crustacea', 'crab', 'mollusk']\n",
+        "# Check what columns are available\n",
+        "print(f\"📋 Available columns: {list(df_sample.columns)[:20]}...\")\n",
         "\n",
-        "if 'scientificName' in df_sample.columns:\n",
-        "    marine_mask = df_sample['scientificName'].str.contains('|'.join(marine_keywords), case=False, na=False)\n",
-        "    marine_data = df_sample[marine_mask]\n",
+        "# Look for species-related columns\n",
+        "species_columns = [col for col in df_sample.columns if any(keyword in col.lower() for keyword in ['species', 'scientific', 'taxon', 'name'])]\n",
+        "print(f\"🔍 Species-related columns: {species_columns}\")\n",
+        "\n",
+        "if species_columns:\n",
+        "    # Use the first species column found\n",
+        "    species_col = species_columns[0]\n",
+        "    print(f\"📊 Using column '{species_col}' for species analysis\")\n",
+        "    \n",
+        "    # Show unique values in the species column\n",
+        "    unique_species = df_sample[species_col].value_counts().head(10)\n",
+        "    print(f\"\\nTop 10 species in '{species_col}':\")\n",
+        "    print(unique_species)\n",
+        "    \n",
+        "    marine_data = df_sample  # Use all data for now\n",
         "else:\n",
-        "    marine_data = df_sample  # Use sample data\n",
+        "    print(\"ℹ️ No species columns found, using all data\")\n",
+        "    marine_data = df_sample\n",
         "\n",
-        "print(f\"✅ Found {len(marine_data)} marine species records\")\n",
-        "\n",
-        "# Show top species\n",
-        "if len(marine_data) > 0:\n",
-        "    species_count = marine_data['scientificName'].value_counts().head(10)\n",
-        "    print(\"\\nTop 10 marine species:\")\n",
-        "    print(species_count)\n"
+        "print(f\"✅ Found {len(marine_data)} records\")\n"
       ]
     },
     {
@@ -240,37 +315,72 @@
       "source": [
         "# Create a simple visualization\n",
         "if len(marine_data) > 0:\n",
+        "    print(\"📊 Creating visualizations...\")\n",
+        "    \n",
         "    plt.figure(figsize=(12, 8))\n",
         "    \n",
-        "    # Plot 1: Species distribution\n",
+        "    # Plot 1: Species distribution (if species column exists)\n",
         "    plt.subplot(2, 2, 1)\n",
-        "    species_count.head(5).plot(kind='bar')\n",
-        "    plt.title('Top 5 Marine Species')\n",
-        "    plt.xticks(rotation=45)\n",
+        "    if species_columns:\n",
+        "        species_count = marine_data[species_col].value_counts().head(5)\n",
+        "        species_count.plot(kind='bar')\n",
+        "        plt.title(f'Top 5 Species in {species_col}')\n",
+        "        plt.xticks(rotation=45)\n",
+        "    else:\n",
+        "        plt.text(0.5, 0.5, 'No species data available', ha='center', va='center')\n",
+        "        plt.title('Species Distribution')\n",
         "    \n",
-        "    # Plot 2: Geographic distribution\n",
+        "    # Plot 2: Geographic distribution (if coordinates exist)\n",
         "    plt.subplot(2, 2, 2)\n",
-        "    plt.scatter(marine_data['decimalLongitude'], marine_data['decimalLatitude'], \n",
-        "               alpha=0.6, s=20)\n",
-        "    plt.xlabel('Longitude')\n",
-        "    plt.ylabel('Latitude')\n",
-        "    plt.title('Geographic Distribution')\n",
+        "    coord_cols = [col for col in marine_data.columns if any(keyword in col.lower() for keyword in ['lat', 'lon', 'longitude', 'latitude'])]\n",
+        "    if coord_cols and len(coord_cols) >= 2:\n",
+        "        lat_col = [col for col in coord_cols if 'lat' in col.lower()][0]\n",
+        "        lon_col = [col for col in coord_cols if 'lon' in col.lower()][0]\n",
+        "        plt.scatter(marine_data[lon_col], marine_data[lat_col], alpha=0.6, s=20)\n",
+        "        plt.xlabel('Longitude')\n",
+        "        plt.ylabel('Latitude')\n",
+        "        plt.title('Geographic Distribution')\n",
+        "    else:\n",
+        "        plt.text(0.5, 0.5, 'No coordinate data available', ha='center', va='center')\n",
+        "        plt.title('Geographic Distribution')\n",
         "    \n",
-        "    # Plot 3: Temporal distribution\n",
+        "    # Plot 3: Temporal distribution (if date columns exist)\n",
         "    plt.subplot(2, 2, 3)\n",
-        "    if 'eventDate' in marine_data.columns:\n",
-        "        marine_data['year'] = pd.to_datetime(marine_data['eventDate']).dt.year\n",
-        "        marine_data['year'].value_counts().sort_index().plot(kind='line')\n",
-        "        plt.title('Records by Year')\n",
-        "        plt.xlabel('Year')\n",
+        "    date_cols = [col for col in marine_data.columns if any(keyword in col.lower() for keyword in ['date', 'year', 'time'])]\n",
+        "    if date_cols:\n",
+        "        date_col = date_cols[0]\n",
+        "        if 'year' in date_col.lower():\n",
+        "            marine_data[date_col].value_counts().sort_index().plot(kind='line')\n",
+        "        else:\n",
+        "            # Try to extract year from date\n",
+        "            try:\n",
+        "                marine_data['year'] = pd.to_datetime(marine_data[date_col]).dt.year\n",
+        "                marine_data['year'].value_counts().sort_index().plot(kind='line')\n",
+        "            except:\n",
+        "                marine_data[date_col].value_counts().head(10).plot(kind='bar')\n",
+        "        plt.title(f'Records by {date_col}')\n",
+        "        plt.xlabel(date_col)\n",
         "        plt.ylabel('Count')\n",
+        "    else:\n",
+        "        plt.text(0.5, 0.5, 'No date data available', ha='center', va='center')\n",
+        "        plt.title('Temporal Distribution')\n",
         "    \n",
         "    # Plot 4: Summary stats\n",
         "    plt.subplot(2, 2, 4)\n",
         "    plt.text(0.1, 0.7, f'Total Records: {len(marine_data)}', fontsize=12)\n",
-        "    plt.text(0.1, 0.5, f'Unique Species: {marine_data[\"scientificName\"].nunique()}', fontsize=12)\n",
-        "    plt.text(0.1, 0.3, f'Latitude Range: {marine_data[\"decimalLatitude\"].min():.1f} - {marine_data[\"decimalLatitude\"].max():.1f}', fontsize=12)\n",
-        "    plt.text(0.1, 0.1, f'Longitude Range: {marine_data[\"decimalLongitude\"].min():.1f} - {marine_data[\"decimalLongitude\"].max():.1f}', fontsize=12)\n",
+        "    if species_columns:\n",
+        "        plt.text(0.1, 0.5, f'Unique Species: {marine_data[species_col].nunique()}', fontsize=12)\n",
+        "    else:\n",
+        "        plt.text(0.1, 0.5, f'Total Columns: {len(marine_data.columns)}', fontsize=12)\n",
+        "    \n",
+        "    if coord_cols and len(coord_cols) >= 2:\n",
+        "        lat_col = [col for col in coord_cols if 'lat' in col.lower()][0]\n",
+        "        lon_col = [col for col in coord_cols if 'lon' in col.lower()][0]\n",
+        "        plt.text(0.1, 0.3, f'Latitude Range: {marine_data[lat_col].min():.1f} - {marine_data[lat_col].max():.1f}', fontsize=12)\n",
+        "        plt.text(0.1, 0.1, f'Longitude Range: {marine_data[lon_col].min():.1f} - {marine_data[lon_col].max():.1f}', fontsize=12)\n",
+        "    else:\n",
+        "        plt.text(0.1, 0.3, f'Data Shape: {marine_data.shape}', fontsize=12)\n",
+        "    \n",
         "    plt.title('Summary Statistics')\n",
         "    plt.axis('off')\n",
         "    \n",
@@ -296,9 +406,6 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "import xarray as xr\n",
-        "import zarr\n",
-        "\n",
         "print(\"🧊 Reading oceanographic data from Zarr...\")\n",
         "\n",
         "# Example Zarr URL (you would get this from STAC search)\n",
@@ -443,9 +550,6 @@
         "# Connect to personal storage\n",
         "print(\"💾 Connecting to personal storage...\")\n",
         "\n",
-        "import boto3\n",
-        "import os\n",
-        "\n",
         "# Check if storage credentials are available\n",
         "if os.getenv(\"AWS_ACCESS_KEY_ID\"):\n",
         "    print(\"✅ Personal storage credentials found!\")\n",
@@ -489,14 +593,28 @@
         "print(\"📊 Processing data for storage...\")\n",
         "\n",
         "if len(marine_data) > 0:\n",
-        "    # Process the marine data\n",
-        "    processed_data = marine_data.groupby('scientificName').agg({\n",
-        "        'decimalLatitude': 'mean',\n",
-        "        'decimalLongitude': 'mean',\n",
-        "        'eventDate': 'count'\n",
-        "    }).reset_index()\n",
-        "    \n",
-        "    processed_data.columns = ['species', 'mean_latitude', 'mean_longitude', 'count']\n",
+        "    # Process the marine data - adapt to available columns\n",
+        "    if species_columns and coord_cols and len(coord_cols) >= 2:\n",
+        "        # Use the actual column names found\n",
+        "        species_col = species_columns[0]\n",
+        "        lat_col = [col for col in coord_cols if 'lat' in col.lower()][0]\n",
+        "        lon_col = [col for col in coord_cols if 'lon' in col.lower()][0]\n",
+        "        \n",
+        "        processed_data = marine_data.groupby(species_col).agg({\n",
+        "            lat_col: 'mean',\n",
+        "            lon_col: 'mean',\n",
+        "            species_col: 'count'\n",
+        "        }).reset_index()\n",
+        "        \n",
+        "        processed_data.columns = ['species', 'mean_latitude', 'mean_longitude', 'count']\n",
+        "    else:\n",
+        "        # Create a simple summary if we don't have the expected columns\n",
+        "        processed_data = pd.DataFrame({\n",
+        "            'species': ['Sample Data'],\n",
+        "            'mean_latitude': [marine_data.iloc[:, 0].mean() if len(marine_data.columns) > 0 else 0],\n",
+        "            'mean_longitude': [marine_data.iloc[:, 1].mean() if len(marine_data.columns) > 1 else 0],\n",
+        "            'count': [len(marine_data)]\n",
+        "        })\n",
         "    \n",
         "    print(f\"✅ Processed data: {len(processed_data)} species\")\n",
         "    print(processed_data.head())\n",
